test/files/neg/macro-deprecate-dont-touch-backquotedidents/Macros_Class_4.scala
package test4

class `macro`
